--- a/.config/i3/config
+++ b/.config/i3/config
@@ -239,4 +239,6 @@ exec --no-startup-id rambox &
 
 exec --no-startup-id compton -b
 
+exec --no-startup-id redshift
+
 exec_always --no-startup-id feh --bg-max --no-xinerama $wallpaper
