Use neomake instead of syntastic

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,7 +90,7 @@ bindsym $mod+q focus parent
 
 set $ws1 "1"
 set $ws2 "2"
-set $ws3 ""
+set $ws3 " web"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
