--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@
 .vim/bundles
 
 # fish
-!.config/omg/
-!.config/fish/
+!/.config/omg/
+!/.config/fish/
+.config/fish/fishd.*
 
 # git
 !.gitconfig
