--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".vim/dein.vim"]
-	path = .vim/dein.vim
-	url = https://github.com/Shougo/dein.vim.git
+[submodule ".vim/vim-plug"]
+	path = .vim/vim-plug
+	url = https://github.com/junegunn/vim-plug.git
