--- a/.config/i3/config
+++ b/.config/i3/config
@@ -45,6 +45,7 @@ bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+m focus right
 
+bindsym $mod+Tab focus right 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
@@ -91,7 +92,7 @@ bindsym $mod+q focus parent
 
 set $ws1 "1"
 set $ws2 "2"
-set $ws3 " web"
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -113,20 +114,23 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+ampersand workspace $ws1
-bindsym $mod+eacute workspace $ws2
-bindsym $mod+quotedbl workspace $ws3
-bindsym $mod+apostrophe workspace $ws4
-bindsym $mod+parenleft workspace $ws5
-bindsym $mod+minus workspace $ws6
-bindsym $mod+egrave workspace $ws7
-bindsym $mod+underscore workspace $ws8
-bindsym $mod+ccedilla workspace $ws9
-bindsym $mod+agrave workspace $ws10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # Assign
-assign [class="Rambox"] $ws10
+assign [class="konsole"] $ws1
 assign [class="Firefox"] $ws3
+assign [class="Code"] $ws4
+assign [class="Steam"] $ws5
+assign [class="discord"] $ws10
 
 # Move to workspace
 bindsym $mod+Shift+w move workspace to output left
@@ -197,12 +201,12 @@ mode "power" {
 
 bindsym $mod+Shift+e mode "power"
 
-set $bg-color 	         #444444
-set $inactive-bg-color   #333333
+set $bg-color            #4e5467
+set $inactive-bg-color   #383C4A
 set $text-color          #eeeeee
 set $inactive-text-color #eeeeee
 set $urgent-bg-color     #ef6c00
-set $indicator           #f0544c
+set $indicator           #5294e2
 
 # window colors
 #                       border              background         text                 indicator
@@ -211,20 +215,6 @@ client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-co
 client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color $indicator
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $indicator
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-	position top
-        status_command i3blocks -c $HOME/.config/i3blocks/config
-	colors {
-		background $bg-color
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
-
 # Remove border
 new_window pixel 2
 
@@ -232,17 +222,18 @@ new_window pixel 2
 gaps inner 4
 gaps outer 2
 
+# Bar
+exec_always --no-startup-id killall polybar; polybar top
+
 #Start albert
-exec --no-startup-id albert &
+exec_always --no-startup-id kill $( pidof albert ); albert
 
 # Show albert
 bindsym $mod+d exec --no-startup-id albert toggle
 
 # Startup
-exec --no-startup-id rambox &
 
-exec --no-startup-id compton -b
-
+exec --no-startup-id Discord
 exec --no-startup-id redshift
 
 exec_always --no-startup-id feh --bg-max --no-xinerama $wallpaper
