--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,14 @@
 [user]
 	name = Duarte David
 	email = deltaduartedavid@gmail.com
+	signingkey = C5F21D116A0BBFE561AF0621C02812E4FF650B65
 [core]
 	autocrlf = input
 [receive]
 	denyCurrentBranch = warn
 [alias]
 	lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+[gpg]
+	program = gpg2
+[commit]
+	gpgsign = true
