--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".tmux/plugins/tpm"]
 	path = .tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "/home/david/.config/nixpkgs/home-manager"]
+	path = /home/david/.config/nixpkgs/home-manager
+	url = https://github.com/rycee/home-manager.git
