--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,12 @@ setw -g mode-keys vi
 # All color
 set -g default-terminal "tmux-256color" 
 
+# Colors
+set -g status-bg colour234
+set -g status-fg colour134
+set -g pane-border-fg colour220
+set -g pane-active-border-fg colour134
+
 # remap prefix to Control + a
 set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
@@ -16,11 +22,17 @@ unbind C-b
 # Reload keybind
 bind-key r source-file ~/.tmux.conf
 
-# switch panes using Alt-vim without prefix
+# Switch panes using Alt-vim without prefix
 bind -n C-h select-pane -L
 bind -n C-l select-pane -R
 bind -n C-k select-pane -U
 bind -n C-j select-pane -D
+
+# Resize panes
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -L 10
+bind h resize-pane -R 10
 
 # Remove escape delay for vim
 set -s escape-time 0
