--- a/.config/albert/albert.conf
+++ b/.config/albert/albert.conf
@@ -8,6 +8,7 @@ displayShadow=true
 frontendId=org.albert.frontend.boxmodel.widgets
 hideOnClose=false
 hideOnFocusLoss=false
+incrementalSort=true
 itemCount=5
 showCentered=true
 showTray=false
