--- a/.config/i3/config
+++ b/.config/i3/config
@@ -34,7 +34,7 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+t exec i3-sensible-terminal
-bindsym $mod+t exec qterminal
+bindsym $mod+t exec hyper
 
 # kill focused window
 bindsym $mod+Shift+Q kill
