--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "/home/david/.config/nixpkgs/home-manager"]
 	path = .config/nixpkgs/home-manager
 	url = https://github.com/rycee/home-manager.git
+[submodule ".config/awesome/redflat"]
+	path = .config/awesome/redflat
+	url = https://github.com/worron/redflat.git
